--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "coverage": "istanbul cover _mocha",
     "coveralls": "npm run build:dist && npm run coverage && coveralls <coverage/lcov.info",
-    "lint": "standard",
+    "lint": "standard src/*",
     "prepublishOnly": "npm run lint && npm run test:build",
     "test": "mocha ./src/test/*.js",
     "test:build": "npm run build:dist && mocha ./test/*.js",
